--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://pranavvraj.github.io/agetest",
+  "homepage": "https://pranavvraj.github.io/squidgame",
   "name": "quiz-app",
   "version": "0.1.0",
   "private": true,
